feat: 正确处理 status